--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "1.0.0",
   "main": "js/index.js",
   "description": "",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node .",
     "build:dev": "tsc --watch",
-    "start:dev": "node --watch ."
+    "start:dev": "node --watch .",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.8.2"
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@eslint/js": "^9.24.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.30.1"
   }
 }
