--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "prettier": "^3.5.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.30.1"
+  },
+  "dependencies": {
+    "uuid": "^11.1.0"
   }
 }
