--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.24.0",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
@@ -34,6 +35,8 @@
     "typescript-eslint": "^8.30.1"
   },
   "dependencies": {
+    "chalk": "^5.4.1",
+    "express": "^5.1.0",
     "uuid": "^11.1.0"
   }
 }
