--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "w7-pokemon-back",
   "version": "1.0.0",
-  "main": "js/index.js",
+  "main": "dist",
   "description": "",
   "type": "module",
   "scripts": {
